# espressoSq

./: .gitignore  CMakeLists.txt  README.md  approx_trig_avx2.cpp  approx_trig_avx2.hpp  espressoSq.pyx  setup.py  sq_avx.cpp  sq_avx.hpp
includes/: approx_trig_avx2.hpp  concept.hpp  simd_intrinsics.hpp  sq_avx.hpp
src/: approx_trig_avx2.cpp  sq_avx.cpp
